fix: harden backend and restore reproducible build